# Heuristic-Guided-Search-vs-Computational-Brute-Force

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.py
Data/: Dashboard.py
Data/benchmark_results/: Dashboard.py  results.csv
Main/Cuda/: parallel_bfs.cu
Main/Environment/: maze.cpp  maze.hpp
Main/Include/Informed_Algorithms/: astar.hpp  dijkstra.hpp
Main/Src/Informed_Algorithms/: astar.cpp  dijkstra.cpp
Main/Src/Uninformed_Algorithms/: bfs.cpp
Main/benchmark/: benchmark.cpp  search_result.hpp
Prototype/: __init__.py  config.py
Prototype/Environment/: __init__.py  maze_generation.py  maze_visualizer.py  run_test.py  tempCodeRunnerFile.py  test_maze.py
Prototype/Environment3D/: __init__.py  dataset_builder_3d.py  maze_generation_3d.py
Prototype/Experiments/: __init__.py  benchmark_runner.py  exporter.py  metrics.py  parameters.py
Prototype/Informed_Algorithms/: __init__.py  astar.py  dijkstra.py  greedy.py
Prototype/Uniformed_Algorithms/: __init__.py  bfs.py  bidirectional.py  dfs.py
visualization/: .gitignore  index.html  package-lock.json  package.json
visualization/src/: App.jsx  main.jsx
visualization/src/components/: Maze3DViewer.jsx
visualization/src/hooks/: useMazeData.js
visualization/src/styles/: global.css
visualization/src/three/: MazeRenderer.js  SceneSetup.js  SearchAnimator.js
